--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,3 +1,8 @@
+<app-add-task></app-add-task>
 @for(task of tasks; track task.id) {
-  <app-task-item [task]="task"></app-task-item>
+  <app-task-item 
+    [task]="task" 
+    (onDeleteTask)="deleteTask($event)" 
+    (onToggleTask)="toggleTask($event)">
+  </app-task-item>
 }
